# knowledge-assistant

./: .gitignore  pyproject.toml  ruff.toml
app/ingestion/: models.py
app/ingestion/loaders/: document_loader.py
app/ingestion/parsers/: document_parser.py  docx_parser.py  markdown_parser.py  parser_registry.py  pdf_parser.py
